# flime1

./: .gitignore  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle  gradle.properties
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/im/nue/flime/: Flime.kt  KeycodeMap.kt  Pigeon.java  ReverseLookupContext.kt  WrapFlutterView.kt
android/app/src/main/jni/: CMakeLists.txt  native_convert.cpp  native_convert.h
android/app/src/main/kotlin/im/nue/flime/: Flime.kt  MainActivity.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: method.xml
android/gradle/wrapper/: gradle-wrapper.properties
lib/: main.dart
lib/api/: api.dart  native.dart
lib/app/: app.dart
lib/app/pages/: home_page.dart  input_page.dart  navigator.dart  setup_page.dart
lib/app/router/: router.dart  router.gr.dart
lib/app/routing/: delegate.dart  parsed_route.dart  parser.dart  route_state.dart
lib/input/: service.dart
lib/input/core/: context.dart  dictionary.dart  engine.dart  schema.dart
lib/input/core/event/: event.dart  event_extension.dart
lib/input/core/processors/: post_filter.dart  pre_filter.dart  translator.dart
lib/input/schemas/: commands.dart  default_schema.dart  options.dart  schemas.dart
lib/input/schemas/processors/post/: de_dup.dart  opencc.dart
lib/input/schemas/processors/pre/: command.dart  editor.dart  normal.dart  selector.dart  symbol.dart
lib/input/schemas/processors/trans/: default_table.dart
lib/keyboard/: layout.dart  state.dart  view.dart
lib/keyboard/api/: apis.dart
lib/keyboard/basic/: event.dart  highlights.dart  key.dart  operations.dart  preset.dart
lib/keyboard/layouts/: candidates_layout.dart  main_layout.dart  number_layout.dart  primary_layout.dart  secondary_layout.dart  utils.dart  widgets.dart
lib/keyboard/models/: constraint.dart
lib/keyboard/providers/: constraint.dart
lib/keyboard/router/: router.dart  router.gr.dart
lib/keyboard/services/: input_service.dart
lib/keyboard/stores/: constraint.dart  constraint.g.dart  input_status.dart  input_status.g.dart  theme.dart  theme.g.dart
lib/keyboard/widgets/: candidates_flow.dart  expand_more.dart  key_inkwell.dart  preset_builder.dart  preset_layout.dart
lib/views/: reverse_lookup.dart
pigeons/: api.dart  generate.sh  input.dart
scripts/: ffigen.sh  generate_pigeon.sh  generate_router.sh
test/: input_test.dart  widget_test.dart
